@@ -15,6 +15,7 @@ depth: 1
 ### Other features
 
  * Add [`wagtailcache`](wagtailcache) and [`wagtailpagecache`](wagtailpagecache) template tags to ensure previewing Pages or Snippets will not be cached (Jake Howard)
+ * Always set help text element ID for form fields with help text in `field.html` template (Sage Abdullah)
 
 ### Bug fixes
 
